Added endpoint config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8080
+poke-api.endpoint=https://pokeapi.co/api/v2/pokemon-species
+translator-api.endpoint=https://api.funtranslations.com/translate/shakespeare
 cache.pokemons.capacity=10000
 cache.pokemons.expire-after-seconds=120
