Fix on API endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
-poke-api.endpoint=https://pokeapi.co/api/v2/
+poke-api.endpoint=https://pokeapi.co/api/v2
 poke-api.species-resource=pokemon-species
-translator-api.endpoint=https://api.funtranslations.com/translate/
+translator-api.endpoint=https://api.funtranslations.com/translate
 translator-api.default-dialect-resource=shakespeare
 cache.pokemons.capacity=10000
 cache.pokemons.expire-after-seconds=120
