Controller tests ok

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+spring.profiles.active=test
 poke-api.endpoint=https://pokeapi.co/api/v2
 poke-api.species-resource=pokemon-species
 translator-api.endpoint=https://api.funtranslations.com/translate
